Convert cart to reducer

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -6,6 +6,8 @@
   margin-left: auto;
   margin-right: auto;
   display: grid;
+  height: 5rem;
   grid-template-columns: auto 1fr;
   justify-items: end;
+  align-items: center;
 }
