--- a/src/components/Auth.module.scss
+++ b/src/components/Auth.module.scss
@@ -1,5 +1,42 @@
 .root {
-  max-width: 75rem;
+  max-width: 37.5rem;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.input {
+  display: flex;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  border-radius: 5px;
+
+  &:focus {
+    border-color: #000;
+    outline: none;
+  }
+}
+
+.submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
+  border: 1px solid #000;
+  background-color: #000;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.message {
+  margin-top: 2rem;
 }
