--- a/src/components/Auth.module.scss
+++ b/src/components/Auth.module.scss
@@ -1,5 +1,5 @@
 .root {
-  max-width: 37.5rem;
+  max-width: 25rem;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -26,6 +26,7 @@
   justify-content: center;
   align-items: center;
   padding: 1rem;
+  margin-bottom: 2rem;
   width: 100%;
   border: 1px solid #000;
   background-color: #000;
@@ -35,8 +36,8 @@
   font-weight: bold;
   border-radius: 5px;
   cursor: pointer;
-}
 
-.message {
-  margin-top: 2rem;
+  &[disabled] {
+    opacity: 0.2;
+  }
 }
